--- Release 2.1.0 ----

2009-12-19 Guido Scholz <guido.scholz@bayernline.de>
	* man/*: Content of English and German manual pages aligned.
	* srcpd.conf.5, de/srcpd.conf.5: Example bus sections for ddl,
	ddl-s88, hsi-88, intellibox, loconet (very bare), loopback and
	m605x added.

2009-08-21 Matthias Trute <mtrute@users.sourceforge.net>
	* src/Makefile.am src/toolbox.c src/toolbox.h src/ib.c
	src/li100-main.c src/loopback.c: new module toolbox, contains 
	the cmpTime function found in multiple driver files.

2009-08-17 Guido Scholz <guido.scholz@bayernline.de>
	* configure.in: Let the configure script show a short summary
	about which modules are in and out, only check for ioperm() if
	ddl-s88 module is used, use AC_HELP_STING to format "configure
	--help" messages

2009-08-18 Matthias Trute <mtrute@users.sourceforge.net>
	* src/loopback.c src/li100.c: copy the cmdTime() from
	ib.c, only a temporary solution to avoid compilation errors
	when disabling the ib module.
	* configure.in src/Makefile.am config-srcpd.c config-srcpd.h:
	option to disable all modules except loopback

2009-08-17 Guido Scholz <guido.scholz@bayernline.de>
	* config-srcpd.c: Create error message if unvalid verbosity
	value is detected. Reset wrong value to maximum limit.
	* configure.in, src/Makefile.am, config-srcpd.c: Configure
	option to disable loconet module added

2009-06-28 Matthias Trute <mtrute@users.sourceforge.net>
	* README.loconet: New document that describes some
	loconet specific stuff.

2009-06-28 Matthias Trute <mtrute@users.sourceforge.net>
	* loconet.c: improved loconet communication, internal code 
	cleanups

2009-06-24 Guido Scholz <guido.scholz@bayernline.de>
	* clientservice.c, srcp-server.h, srcpd.c: Improved server
	message string handling.
	* srcpd.c: Report error, if chdir() fails.

2009-06-21 Guido Scholz <guido.scholz@bayernline.de>
	* config-srcpd.*, io.*: Removed sys/param.h dependency. Fixed
	compiler warning.

2009-01-31 Guido Scholz <guido.scholz@bayernline.de>