@@ -16,7 +16,8 @@ srcpd-2.1.0 (2009-12-??)
     o Improved timing for multi protocol mode in DDL module.
     o configure may be used to disable modules at compile time.
     o Manual pages reworked.
-
+    o renamed loconet setting loconetID to loconet-id and getTIME to
+      sync-time-from-loconet, it's more like the other settings.
 
 srcpd-2.0.12 (2008-11-19)
   Fixed Bugs
